# Familienkalender

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  apparmor.txt  biome.json  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run.sh
app/: __init__.py  admin.py  auth.py  busy_sync.py  feed.py  feed_app.py  feed_constants.py  filtering.py  google_busy.py  google_oauth.py  holidays_bavaria.py  main.py  models.py  power.py  sanitize.py  serve.py  settings.py  slideshow.py  storage.py  sync.py  tags.py  url_validation.py  weather.py
app/sources/: __init__.py  caldav.py  google.py  google_contacts.py  limits.py
app/static/: index.html  styles.css
app/static/admin/: admin.html  api.js  birthdays-wizard.js  busy-sync.js  changelog.js  dom.js  feed.js  forbidden.html  google-wizard.js  main.js  nextcloud-wizard.js  power-devices.js  settings.js  slideshow-path.js  slideshow.js  sources.js  wizard-shared.js
app/static/css/: admin.css  calendar.css
app/static/js/: api.js  colors.js  config-retry.js  dates.js  dom.js  events.js  gestures.js  icons.js  legend.js  main.js  month-view.js  popover.js  power-chart.js  power-format.js  power-view.js  screensaver-memory.js  slideshow-format.js  slideshow-media.js  slideshow-view.js  state.js  tag-picker.js  theme-memory.js  view-memory.js  weather-chart.js  weather-format.js  weather-map.js  weather-view.js  week-view.js
docs/: backlog.md  google-oauth-einrichtung.md
scripts/: seed_demo.py
tests/: conftest.py  test_admin_api.py  test_api.py  test_auth.py  test_busy_sync.py  test_cache_headers.py  test_caldav.py  test_feed.py  test_feed_app.py  test_feed_dedup.py  test_feed_route.py  test_filtering.py  test_frontend_static.py  test_google.py  test_google_busy.py  test_google_contacts.py  test_google_oauth.py  test_health.py  test_holidays_bavaria.py  test_index.py  test_ingress.py  test_integration_nextcloud.py  test_ip_allowlist.py  test_power_api.py  test_power_history_api.py  test_request_limits.py  test_run_sh.py  test_sanitize.py  test_seed_demo.py  test_serve.py  test_settings.py  test_slideshow.py  test_storage.py  test_sync.py  test_tags_api.py  test_url_validation.py  test_weather_forecast.py  test_weather_radar.py
tests/e2e/: conftest.py  helpers.py  test_admin.py  test_admin_gate.py  test_admin_slideshow_e2e.py  test_default_view.py  test_header_controls.py  test_legend.py  test_month_view.py  test_navigation.py  test_power.py  test_refresh_and_viewports.py  test_slideshow_e2e.py  test_tags.py  test_theme.py  test_view_limits.py  test_view_persistence.py  test_weather.py  test_week_view.py
tests/fixtures/caldav/: allday.ics  floating.ics  recurring.ics  simple.ics
tests/js/: busy-sync.test.mjs  changelog.test.mjs  colors.test.mjs  config-retry.test.mjs  dates.test.mjs  power-chart.test.mjs  power-devices.test.mjs  power-format.test.mjs  power-last-updated.test.mjs  screensaver-memory.test.mjs  slideshow-format.test.mjs  slideshow-media.test.mjs  slideshow-path.test.mjs  tag-picker.test.mjs  theme-memory.test.mjs  view-memory.test.mjs  weather-chart.test.mjs  weather-format.test.mjs  weather-map.test.mjs  week-view.test.mjs
