[project]
name = "familienkalender"
version = "0.1.0"
description = "Aggregierter Familienkalender als lokales Home-Assistant-Add-on"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "icalendar>=6",
    "recurring-ical-events>=3.8",
    "tzdata",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests need secrets.local.json and a reachable server; they are
# excluded by default and run explicitly via `pytest -m integration`
# (a -m option on the command line overrides the one from addopts).
addopts = "-q -m 'not integration'"
markers = [
    "integration: Tests gegen echte externe Dienste (brauchen secrets.local.json)",
]
# Make the repo root importable regardless of how pytest is invoked
# (python -m pytest vs. the pytest entry point).
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # unused arguments
    "PTH", # prefer pathlib
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and fixtures that shadow names.
"tests/*" = ["ARG"]
