[project]
name = "familienkalender"
version = "0.1.0"
description = "Aggregierter Familienkalender als lokales Home-Assistant-Add-on"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "icalendar>=6",
    "recurring-ical-events>=3.8",
    "tzdata",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    # Browser E2E tests run only on the dev machine, never in the add-on
    # container — therefore a dev dependency, not part of requirements.in.
    # Needs a one-time `python -m playwright install chromium`.
    "pytest-playwright>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests need secrets.local.json and a reachable server; E2E tests
# need playwright and an installed chromium. Both are excluded by default and
# run explicitly via `pytest -m integration` / `pytest -m e2e`
# (a -m option on the command line overrides the one from addopts).
addopts = "-q -m 'not integration and not e2e'"
markers = [
    "integration: Tests gegen echte externe Dienste (brauchen secrets.local.json)",
    "e2e: Browser-E2E-Tests mit Playwright (brauchen chromium)",
]
# Make the repo root importable regardless of how pytest is invoked
# (python -m pytest vs. the pytest entry point).
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # unused arguments
    "PTH", # prefer pathlib
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and fixtures that shadow names.
"tests/*" = ["ARG"]
